--- a/HW2_DataAnalysis.ipynb
+++ b/HW2_DataAnalysis.ipynb
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "c242aa3a",
    "metadata": {},
    "outputs": [
@@ -915,25 +915,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>East North Central</td>\n",
-       "      <td>4754</td>\n",
-       "      <td>50000102986</td>\n",
-       "      <td>0.000000095</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>East South Central</td>\n",
-       "      <td>1529</td>\n",
-       "      <td>7567764699</td>\n",
-       "      <td>0.000000202</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Middle Atlantic</td>\n",
-       "      <td>3781</td>\n",
-       "      <td>51386647495</td>\n",
-       "      <td>0.000000074</td>\n",
+       "      <th>4</th>\n",
+       "      <td>New England</td>\n",
+       "      <td>1437</td>\n",
+       "      <td>3708797804</td>\n",
+       "      <td>0.000000387</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -943,18 +929,25 @@
        "      <td>0.000000290</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>New England</td>\n",
-       "      <td>1437</td>\n",
-       "      <td>3708797804</td>\n",
-       "      <td>0.000000387</td>\n",
+       "      <th>7</th>\n",
+       "      <td>West North Central</td>\n",
+       "      <td>3578</td>\n",
+       "      <td>14841264104</td>\n",
+       "      <td>0.000000241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Pacific</td>\n",
-       "      <td>1304</td>\n",
-       "      <td>22348595190</td>\n",
-       "      <td>0.000000058</td>\n",
+       "      <th>1</th>\n",
+       "      <td>East South Central</td>\n",
+       "      <td>1529</td>\n",
+       "      <td>7567764699</td>\n",
+       "      <td>0.000000202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>4754</td>\n",
+       "      <td>50000102986</td>\n",
+       "      <td>0.000000095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -964,11 +957,18 @@
        "      <td>0.000000094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>West North Central</td>\n",
-       "      <td>3578</td>\n",
-       "      <td>14841264104</td>\n",
-       "      <td>0.000000241</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Middle Atlantic</td>\n",
+       "      <td>3781</td>\n",
+       "      <td>51386647495</td>\n",
+       "      <td>0.000000074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Pacific</td>\n",
+       "      <td>1304</td>\n",
+       "      <td>22348595190</td>\n",
+       "      <td>0.000000058</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -983,18 +983,18 @@
       ],
       "text/plain": [
        "    regional_division  article_title   population article_per_capita\n",
-       "0  East North Central           4754  50000102986        0.000000095\n",
-       "1  East South Central           1529   7567764699        0.000000202\n",
-       "2     Middle Atlantic           3781  51386647495        0.000000074\n",
-       "3            Mountain           1189   4100790927        0.000000290\n",
        "4         New England           1437   3708797804        0.000000387\n",
-       "5             Pacific           1304  22348595190        0.000000058\n",
-       "6      South Atlantic           1850  19595194539        0.000000094\n",
+       "3            Mountain           1189   4100790927        0.000000290\n",
        "7  West North Central           3578  14841264104        0.000000241\n",
+       "1  East South Central           1529   7567764699        0.000000202\n",
+       "0  East North Central           4754  50000102986        0.000000095\n",
+       "6      South Atlantic           1850  19595194539        0.000000094\n",
+       "2     Middle Atlantic           3781  51386647495        0.000000074\n",
+       "5             Pacific           1304  22348595190        0.000000058\n",
        "8  West South Central           2103  39975932892        0.000000053"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1015,7 @@
     "# Convert scientific notation to decimal\n",
     "articles_per_region['article_per_capita'] = articles_per_region['article_per_capita'].apply(lambda x: '%.9f' % x)\n",
     "\n",
-    "articles_per_region"
+    "articles_per_region.sort_values(by='article_per_capita', ascending=False)"
    ]
   },
   {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "91edfb5f",
    "metadata": {},
    "outputs": [
@@ -1062,27 +1062,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>East North Central</td>\n",
-       "      <td>711</td>\n",
-       "      <td>50000102986</td>\n",
-       "      <td>0.000000014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>East South Central</td>\n",
-       "      <td>315</td>\n",
-       "      <td>7567764699</td>\n",
-       "      <td>0.000000042</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Middle Atlantic</td>\n",
-       "      <td>1056</td>\n",
-       "      <td>51386647495</td>\n",
-       "      <td>0.000000021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Mountain</td>\n",
        "      <td>336</td>\n",
@@ -1097,11 +1076,18 @@
        "      <td>0.000000061</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Pacific</td>\n",
-       "      <td>491</td>\n",
-       "      <td>22348595190</td>\n",
-       "      <td>0.000000022</td>\n",
+       "      <th>7</th>\n",
+       "      <td>West North Central</td>\n",
+       "      <td>638</td>\n",
+       "      <td>14841264104</td>\n",
+       "      <td>0.000000043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>East South Central</td>\n",
+       "      <td>315</td>\n",
+       "      <td>7567764699</td>\n",
+       "      <td>0.000000042</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1111,11 +1097,18 @@
        "      <td>0.000000027</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>West North Central</td>\n",
-       "      <td>638</td>\n",
-       "      <td>14841264104</td>\n",
-       "      <td>0.000000043</td>\n",
+       "      <th>5</th>\n",
+       "      <td>Pacific</td>\n",
+       "      <td>491</td>\n",
+       "      <td>22348595190</td>\n",
+       "      <td>0.000000022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Middle Atlantic</td>\n",
+       "      <td>1056</td>\n",
+       "      <td>51386647495</td>\n",
+       "      <td>0.000000021</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1124,24 +1117,31 @@
        "      <td>39975932892</td>\n",
        "      <td>0.000000016</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>711</td>\n",
+       "      <td>50000102986</td>\n",
+       "      <td>0.000000014</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "    regional_division  article_title   population hq_article_per_capita\n",
-       "0  East North Central            711  50000102986           0.000000014\n",
-       "1  East South Central            315   7567764699           0.000000042\n",
-       "2     Middle Atlantic           1056  51386647495           0.000000021\n",
        "3            Mountain            336   4100790927           0.000000082\n",
        "4         New England            225   3708797804           0.000000061\n",
-       "5             Pacific            491  22348595190           0.000000022\n",
-       "6      South Atlantic            524  19595194539           0.000000027\n",
        "7  West North Central            638  14841264104           0.000000043\n",
-       "8  West South Central            638  39975932892           0.000000016"
+       "1  East South Central            315   7567764699           0.000000042\n",
+       "6      South Atlantic            524  19595194539           0.000000027\n",
+       "5             Pacific            491  22348595190           0.000000022\n",
+       "2     Middle Atlantic           1056  51386647495           0.000000021\n",
+       "8  West South Central            638  39975932892           0.000000016\n",
+       "0  East North Central            711  50000102986           0.000000014"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,8 +1160,16 @@
     "hq_articles_region['hq_article_per_capita'] = hq_articles_region['hq_article_per_capita'].apply(lambda x: '%.9f' % x)\n",
     "\n",
     "\n",
-    "hq_articles_region"
+    "hq_articles_region.sort_values(by='hq_article_per_capita', ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c14784ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
